# fin_track

./: .gitignore  README.md  main.py  pyproject.toml
src/: categorizer.py  config.py  db.py  parsers.py  schemas.py  sheets.py
tests/: test_categorizer.py  test_db.py  test_fuzzy_categorizer.py  test_parsers.py
